@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE component SYSTEM "http://corepl.us/api/2_1/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.5.6~core3" name="TinyMCE" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.5.6~core4" name="TinyMCE" execmode="web">
 	<requires>
 		<require name="core" type="component"/>
 		<require name="jquery" type="library"/>
@@ -16,8 +16,8 @@
 		<file filename="templates/pages/tinymce/link.phtml" md5="524d952e87774b2bafd2324e7c15274b"/>
 	</view>
 	<files>
-		<file filename="CHANGELOG" md5="7fbe931e0c6ef52c251332f1da630523"/>
-		<file filename="TinyMCE.lib.php" md5="299af7d3375295c954d6c514a22baae5">
+		<file filename="CHANGELOG" md5="d0282de892000032787257103464c6fd"/>
+		<file filename="TinyMCE.lib.php" md5="7080a5a9d334d12067cef63150746cff">
 			<class name="TinyMCE"/>
 		</file>
 		<file filename="TinyMCEFormElement.class.php" md5="5c3eccd47fabc69634e956046b08ee73">
@@ -301,6 +301,7 @@
 		<upgrade from="3.5.5~core2" to="3.5.6~core1"/>
 		<upgrade from="3.5.6~core1" to="3.5.6~core2"/>
 		<upgrade from="3.5.6~core2" to="3.5.6~core3"/>
+		<upgrade from="3.5.6~core3" to="3.5.6~core4"/>
 	</upgrades>
 	<authors>
 		<author name="Charlie Powell" email="charlie@eval.bz"/>
