@@ -1,3 +1,9 @@
+TinyMCE 3.5.6~core4
+
+	* Moved the default tinymce options into a javascript variable Core.TinyMCEDefaults to allow tinymce to be reinstantiated easily
+	via javascript after content has been dynamically added to the dom.
+	-- Charlie Powell <charlie@eval.bz>  23 Jan 2013
+
 TinyMCE 3.5.6~core3
 
 	* Minor fix - removed the "required" attribute for tinymce elements.  It wasn't playing nicely with FF or Chrome.
